@@ -1,4 +1,4 @@
-function [newx, dydx] = windiff(y, x, window_size)
+function [dydx, newx] = windiff(y, x, window_size)
 % 3DFM function  
 % Math 
 % last modified 10/26/04 
@@ -7,7 +7,7 @@ function [newx, dydx] = windiff(y, x, window_size)
 % of window-length window_size.  It returns the derivative as dydx, and
 % also returns the grid, newx, on which the derivative was calculated.
 %  
-%  [newx, dydx] = windiff(x, window_size)
+%  [dydx, newx] = windiff(y, x, window_size)
 %   
 %  where "x" is a datastream's independent variable
 %        "y" is a datastream's dependent variable
@@ -17,7 +17,9 @@ function [newx, dydx] = windiff(y, x, window_size)
 %  10/11/04 - created; jcribb.  
 %  10/23/04 - added the independent variable, x, so that its grid is computed properly; jcribb
 %  10/26/04 - fixed a bug in calculation; jcribb.
+%  11/17/04 - updated documentation, switched outputs to be more consistent.
 %
+
 
 	A = y(1:end-window_size,:);
 	B = y(window_size+1:end,:);
